cambios en plantillas

--- a/Isp/templates/home.html
+++ b/Isp/templates/home.html
@@ -1,6 +1,10 @@
-{% extends 'main.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
+
 {% block container %}
-    
+
+    {% block main %}
+
+    {% endblock %}
 {% endblock %}
