--- a/Isp/templates/base.html
+++ b/Isp/templates/base.html
@@ -11,27 +11,13 @@
     {% block extracss %}{% endblock %}
 </head>
 <body>
-    <nav class="bg-nav navbar navbar-expand-lg">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'img/logo.png' %}" alt="logo" width="70px">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    {% block itemNavbar %}{% endblock %}
-                </ul>
-            </div>
-        </div>
-</nav>
+    {% block nav %}
+    {% include 'nav_bar.html' %}
+    {% endblock %}
     <div class="container p-2">
         {% include 'mensajes.html' %}
         {% block container %}{% endblock %}
     </div>
-    
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script> 
     {% block extrajs %}{% endblock %}
 </body>
