--- a/Isp/templates/main.html
+++ b/Isp/templates/main.html
@@ -1,22 +1,22 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block extracss %}
+{% block extracss %}{% endblock %}
 
-{% endblock %}
-
-{% block itemNavbar %}
-    {% include 'nav_bar.html' %}
+{% block nav %}
+{% include 'nav_bar.html' %}
 {% endblock %}
 
 {% block container %}
+
+
+
 <div class="container">
   <div class="d-flex justify-content-center ">
       {% block main %}
-
+      
       {% endblock %}
   </div>
 </div>
+{% block modals %}{% endblock %}
 {% endblock %}
-
-{% block modals %} {% endblock %}
