--- a/Isp/templates/login.html
+++ b/Isp/templates/login.html
@@ -26,7 +26,7 @@
                                             <input type="password" class="form-control form-control-user"
                                                 id="exampleInputPassword" placeholder="Password">
                                         </div>
-                                        <a href="#" class="btn btn-primary btn-user btn-block">
+                                        <a href={% url 'home'%} class="btn btn-primary btn-user btn-block">
                                             Iniciar Session
                                         </a>
                                         <hr>
