--- a/Isp/templates/nav_bar.html
+++ b/Isp/templates/nav_bar.html
@@ -15,7 +15,7 @@
                         Gestión Clientes
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Registrar cliente</a></li>
+                        <li><a class="dropdown-item" href={% url "apli:ClienteCrear"%}>Registrar cliente</a></li>
                         <li><a class="dropdown-item" href="#">Listado de clientes</a></li>
                         <li><a class="dropdown-item" href="#">Listado de Pagos Pendientes</a></li>
                         <li class="dropdown-divider"></li>
