--- a/Isp/templates/form_base.html
+++ b/Isp/templates/form_base.html
@@ -43,7 +43,7 @@
                                             id="exampleRepeatPassword" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                <a href="#" class="btn btn-primary btn-user btn-block">
                                     Registrar Cliente
                                 </a>
                                 <hr>
