--- a/Isp/templates/base2.html
+++ b/Isp/templates/base2.html
@@ -13,6 +13,9 @@
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
     <!-- Custom styles for this template-->
     <link rel="stylesheet" href="{% static 'sb2/css/sb-admin-2.css' %}">
+    {% block extrascss%}
+
+    {% endblock extrascss %}
 </head>
 <body class="bg-gradient-primary">
     {% block body %}
@@ -29,7 +32,9 @@
 
     <!-- Custom scripts for all pages-->
     <script src="{% static 'sb2/js/sb-admin-2.min.js' %}"></script>
+    {% block extrajs %}
 
+    {% endblock extrajs %}
 </body>
 
 
