--- a/Isp/templates/home.html
+++ b/Isp/templates/home.html
@@ -163,7 +163,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancelar</button>
-                    <a class="btn btn-primary" href="login.html">Aceptar</a>
+                    <a class="btn btn-primary" href={% url 'logout' %}>Aceptar</a>
                 </div>
             </div>
         </div>
