--- a/Isp/templates/home.html
+++ b/Isp/templates/home.html
@@ -115,16 +115,17 @@
                     </ul>
 
                 </nav>
+
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
-
                     <!-- Page Heading -->
                     <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
-
+                    <!-- /.container-fluid -->
+                    {% block listado %}
+                    {% endblock listado %}
                 </div>
-                <!-- /.container-fluid -->
 
             </div>
             <!-- End of Main Content -->
