agregado el template base de creacion

--- a/Isp/templates/form_base.html
+++ b/Isp/templates/form_base.html
@@ -1,6 +1,6 @@
-{% extends 'base2.html'%}
+{% extends 'home.html' %}
 {% load static %}
-{% block body%}
+{% block content %}
     <div class="container">
         <div class="card o-hidden border-0 shadow-lg my-5">
             <div class="card-body p-0">
@@ -10,7 +10,7 @@
                     <div class="col-lg-7">
                         <div class="p-5">
                             <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Alta Cliente</h1>
+                                <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                             </div>
                             <form class="user">
                                 <div class="form-group row">
@@ -23,15 +23,9 @@
                                             placeholder="Last Name">
                                     </div>
                                 </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                            placeholder="Second Name">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                            placeholder="Most Name">
-                                    </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                        placeholder="Email Address">
                                 </div>
                                 <div class="form-group row">
                                     <div class="col-sm-6 mb-3 mb-sm-0">
@@ -43,16 +37,14 @@
                                             id="exampleRepeatPassword" placeholder="Repeat Password">
                                     </div>
                                 </div>
-                                <a href="#" class="btn btn-primary btn-user btn-block">
-                                    Registrar Cliente
+                                <a href="login.html" class="btn btn-primary btn-user btn-block">
+                                    Register Account
                                 </a>
-                                <hr>
                             </form>
-                            <hr>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-{% endblock body%}
+{% endblock content %}
