--- a/Isp/templates/listado_base.html
+++ b/Isp/templates/listado_base.html
@@ -1,7 +1,7 @@
 {% extends 'home.html' %}
 {% load static %}
 
-{% block listado%}
+{% block  content%}
     <div class="card shadow mb-4">
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">DataTables Example</h6>
@@ -34,4 +34,4 @@
             </div>
         </div>
     </div>
-{% endblock listado %}
+{% endblock content %}
