--- a/Isp/templates/home.html
+++ b/Isp/templates/home.html
@@ -123,8 +123,8 @@
                     <!-- Page Heading -->
                     <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
                     <!-- /.container-fluid -->
-                    {% block listado %}
-                    {% endblock listado %}
+                    {% block content %}
+                    {% endblock content %}
                 </div>
 
             </div>
