--- a/Isp/templates/nav_bar.html
+++ b/Isp/templates/nav_bar.html
@@ -26,7 +26,7 @@
                         Gestión Servicios
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Agregar servicio</a></li>
+                        <li><a class="dropdown-item" href={% url "apli:ServicioCrear"%}>Agregar servicio</a></li>
                         <li><a class="dropdown-item" href="#">Listado de servicios</a></li>
                         <li><a class="dropdown-item" href="#">Modificar servicio</a></li>
                         <li><a class="dropdown-item" href="#">Quitar servicio</a></li>
