--- a/Isp/templates/home.html
+++ b/Isp/templates/home.html
@@ -186,7 +186,7 @@
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
                     <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Blank Page</h1>
+                    <h1 class="h3 mb-4 text-gray-800">{% block nombre %}{% endblock nombre %}</h1>
                     <!-- /.container-fluid -->
                     {% block content %}
                     {% endblock content %}
