--- a/Isp/Internet_Valle/templates/cliente_form.html
+++ b/Isp/Internet_Valle/templates/cliente_form.html
@@ -3,30 +3,35 @@
 {% block nombre %}Alta De Cliente{% endblock nombre %}
 {% block nombre2 %}Registrar Cliente{% endblock nombre2 %}
 {% block campos %}
-       <!– En  campos se nesecita del form.py para poder laburar con los atributos dle formualario para poder hacer los clean data los submit –>
-     <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                                            placeholder="First Name">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="text" class="form-control form-control-user" id="exampleLastName"
-                                            placeholder="Last Name">
-                                    </div>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
-                                        placeholder="Email Address">
-                                </div>
-                                <div class="form-group row">
-                                    <div class="col-sm-6 mb-3 mb-sm-0">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleInputPassword" placeholder="Password">
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleRepeatPassword" placeholder="Repeat Password">
-                                    </div>
-                                </div>
-    {% block  titulo_boton %}Registrar Cliente{% endblock titulo_boton %}
+    <form method="post">
+        {% csrf_token %}
+
+        <div class="form-group row">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+                {{ form.nombre }}
+            </div>
+            <div class="col-sm-6">
+                {{ form.apellido }}
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+                {{ form.dni }}
+            </div>
+            <div class="col-sm-6">
+                {{ form.telefono }}
+            </div>
+        </div>
+
+        <div class="form-group row">
+            <div class="col-sm-6 mb-3 mb-sm-0">
+                {{ form.mail }}
+            </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary btn-center">
+            <i class="fas fa-save"></i> Guardar registro
+        </button>
+    </form>
 {% endblock campos %}
