--- a/Isp/templates/listado_base.html
+++ b/Isp/templates/listado_base.html
@@ -10,25 +10,14 @@
             <div class="table-responsive">
                 <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                     <thead>
-                      <tr>
-                          <th>Name</th>
-                          <th>Position</th>
-                          <th>Office</th>
-                          <th>Age</th>
-                          <th>Start date</th>
-                          <th>Salary</th>
-                      </tr>
+                        {% block thead %}
+                        {% endblock thead %}
                     </thead>
 
                     <tbody>
-                       <tr>
-                           <td>Tiger Nixon</td>
-                           <td>System Architect</td>
-                           <td>Edinburgh</td>
-                           <td>61</td>
-                           <td>2011/04/25</td>
-                           <td>$320,800</td>
-                       </tr>
+                        {% block tr %}
+
+                        {% endblock tr %}
                     </tbody>
                 </table>
             </div>
