--- a/Isp/Internet_Valle/templates/cliente_form.html
+++ b/Isp/Internet_Valle/templates/cliente_form.html
@@ -3,7 +3,7 @@
 {% block nombre %}Alta De Cliente{% endblock nombre %}
 {% block nombre2 %}Registrar Cliente{% endblock nombre2 %}
 {% block campos %}
-    <form method="post">
+    <form method="POST">
         {% csrf_token %}
 
         <div class="form-group row">
