--- a/Isp/Internet_Valle/templates/cliente_list.html
+++ b/Isp/Internet_Valle/templates/cliente_list.html
@@ -1,8 +1,6 @@
 {% extends 'listado_base.html' %}
 {% load static %}
 {% block thead %}
-
-{% endblock thead %}
     <tr>
         <th>Nombre</th>
         <th>Apellido</th>
@@ -10,13 +8,16 @@
         <th>Telefono</th>
         <th>Email</th>
     </tr>
+{% endblock thead %}
+
 {% block tbody %}
     {% for c in object_list  %}
         <tr>
             <td>{{ c.nombre }}</td>
             <td>{{ c.apellido }}</td>
-            <td>{{ c.telefono }}</td>
-            <td>{{ c.email }}</td>
+            <td>{{ c.dni }}</td>
+           <td>{{ c.telefono }}</td>
+           <td>{{ c.mail }}</td>
         </tr>
     {% endfor %}
 {% endblock tbody %}
