--- a/Isp/templates/listado_base.html
+++ b/Isp/templates/listado_base.html
@@ -15,9 +15,9 @@
                     </thead>
 
                     <tbody>
-                        {% block tr %}
+                        {% block tbody %}
 
-                        {% endblock tr %}
+                        {% endblock tbody %}
                     </tbody>
                 </table>
             </div>
