--- a/Isp/templates/home.html
+++ b/Isp/templates/home.html
@@ -24,7 +24,7 @@
                 Interface
             </div>
 
-            <!-- Nav Item - Pages Collapse Menu -->
+            <!-- ############### CLIENTE ############### -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo1"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -34,10 +34,11 @@
                 <div id="collapseTwo1" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href={% url "apli:ClienteCrear"%}>Registrar cliente</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href={% url "apli:ClienteListar"%}>Listado de Clientes</a>
                     </div>
                 </div>
             </li>
+            <!-- ############### Servicio ############### -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo2"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -51,6 +52,7 @@
                     </div>
                 </div>
             </li>
+            <!-- ############### Equipo ############### -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo3"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -64,6 +66,7 @@
                     </div>
                 </div>
             </li>
+            <!-- ############### Contrato ############### -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo4"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -77,6 +80,7 @@
                     </div>
                 </div>
             </li>
+            <!-- ############### PAGO ############### -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo5"
                     aria-expanded="true" aria-controls="collapseTwo">
@@ -90,6 +94,7 @@
                     </div>
                 </div>
             </li>
+            <!-- ############### Adicionales ############### -->
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo6"
                     aria-expanded="true" aria-controls="collapseTwo">
