--- a/Isp/templates/home.html
+++ b/Isp/templates/home.html
@@ -48,7 +48,7 @@
                 <div id="collapseTwo2" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href={% url "apli:ServicioCrear"%}>Agregar Servicio</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href={% url "apli:ServicioListar"%}>Listado de Servicios</a>
                     </div>
                 </div>
             </li>
@@ -62,7 +62,7 @@
                 <div id="collapseTwo3" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href={% url "apli:EquipoCrear"%}>Agregar Equipo</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href={% url "apli:EquipoListar"%}>Listado de Equipos</a>
                     </div>
                 </div>
             </li>
@@ -76,7 +76,7 @@
                 <div id="collapseTwo4" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href={% url "apli:ContratoCrear"%}>Crear Contrato</a>
-                        <a class="collapse-item" href="cards.html">Cards</a>
+                        <a class="collapse-item" href={% url "apli:ContratoListar"%}>Listado de Contratos</a>
                     </div>
                 </div>
             </li>
