--- a/Isp/templates/home.html
+++ b/Isp/templates/home.html
@@ -108,6 +108,22 @@
                     </div>
                 </div>
             </li>
+            <!--- ######################  localidad ###################### ---->
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo7"
+                    aria-expanded="true" aria-controls="collapseTwo">
+                    <i class="fas fa-fw fa-cog"></i>
+                    <span>localidad</span>
+                </a>
+                <div id="collapseTwo7" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <a class="collapse-item" href={% url "apli:localidadCrear"%}>Agregar localidad</a>
+                        <a class="collapse-item" href={% url "apli:LocalidadListar"%}>Listado localidades</a>
+                    </div>
+                </div>
+           </li>
+
+
             <!-- Divider -->
             <hr class="sidebar-divider">
             <!-- Divider -->
