--- a/Isp/Internet_Valle/templates/localidad_form.html
+++ b/Isp/Internet_Valle/templates/localidad_form.html
@@ -1,37 +1,35 @@
 {% extends 'form_base.html' %}
 {% load static %}
-{% block nombre %}Alta De Contrato{% endblock nombre %}
-{% block nombre2 %}Registrar Contrato{% endblock nombre2 %}
+{% block nombre %}Alta De Cliente{% endblock nombre %}
+{% block nombre2 %}Registrar Cliente{% endblock nombre2 %}
 {% block campos %}
     <form method="POST">
         {% csrf_token %}
-        
+
         <div class="form-group row">
             <div class="col-sm-6 mb-3 mb-sm-0">
-                {{ form.cliente }}
+                {{ form.nombre }}
             </div>
             <div class="col-sm-6">
-                {{ form.servicio }}
+                {{ form.apellido }}
             </div>
         </div>
 
         <div class="form-group row">
             <div class="col-sm-6 mb-3 mb-sm-0">
-                {{ form.direccion }}
+                {{ form.dni }}
             </div>
             <div class="col-sm-6">
-                {{ form.localidad }}
+                {{ form.telefono }}
             </div>
         </div>
 
         <div class="form-group row">
             <div class="col-sm-6 mb-3 mb-sm-0">
-                {{ form.fecha_inicio }}
-            </div>
-            <div class="col-sm-6">
-                {{ form.fecha_fin }}
+                {{ form.mail }}
             </div>
         </div>
+
         <button type="submit" class="btn btn-primary btn-center">
             <i class="fas fa-save"></i> Guardar registro
         </button>
