arreglos en modelo y contrato

--- a/Isp/Internet_Valle/templates/contrato_form.html
+++ b/Isp/Internet_Valle/templates/contrato_form.html
@@ -29,7 +29,7 @@
                 {{ form.fecha_inicio }}
             </div>
             <div class="col-sm-6">
-                {{ form.fecha_fin }}
+                {{ form.equipo }}
             </div>
         </div>
         <button type="submit" class="btn btn-primary btn-center">
