--- a/Isp/Internet_Valle/templates/cliente_form.html
+++ b/Isp/Internet_Valle/templates/cliente_form.html
@@ -7,25 +7,31 @@
         {% csrf_token %}
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.nombre.id_for_label }}" class = "col-sm-3 col-form-label" > Nombre del cliente </label> 
+            <div class="col-sm-3 mb-3 mb-sm-0"> 
                 {{ form.nombre }}
             </div>
-            <div class="col-sm-6">
+            <label for = " {{ form.apellido.id_for_label }}" class = "col-sm-3 col-form-label"> Apellido del cliente </label> 
+            <div class="col-sm-3 mb-3 mb-sm-0"> 
                 {{ form.apellido }}
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.dni.id_for_label }}" class = "col-sm-3 col-form-label" > DNI del cliente </label> 
+            <div class="col-sm-3 mb-3 mb-sm-0"> 
                 {{ form.dni }}
             </div>
-            <div class="col-sm-6">
+            <label for = " {{ form.telefono.id_for_label }}" class = "col-sm-3 col-form-label" > Numero de telefono del cliente </label> 
+            <div class="col-sm-3 mb-3 mb-sm-0"> 
                 {{ form.telefono }}
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.mail.id_for_label }}" class = "col-sm-3 col-form-label" > Email del cliente </label>  
+            <div class="col-sm-3 mb-3 mb-sm-0">  
+
                 {{ form.mail }}
             </div>
         </div>
