--- a/Isp/Internet_Valle/templates/contrato_form.html
+++ b/Isp/Internet_Valle/templates/contrato_form.html
@@ -7,28 +7,34 @@
         {% csrf_token %}
         
         <div class="form-group row">
+            <label for = " {{ form.cliente.id_for_label }}"  > Seleccione un cliente: </label> 
             <div class="col-sm-6 mb-3 mb-sm-0">
                 {{ form.cliente }}
             </div>
-            <div class="col-sm-6">
+            <label for = " {{ form.servicio.id_for_label }}" > Seleccione un servicio: </label> 
+            <div class="col-sm-6"> 
                 {{ form.servicio }}
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.direccion.id_for_label }}" > Indique una direccion </label> 
+            <div class="col-sm-6 mb-3 mb-sm-0"> 
                 {{ form.direccion }}
             </div>
-            <div class="col-sm-6">
+            <label for = " {{ form.localidad.id_for_label }}" > Seleccione una localidad: </label> 
+            <div class="col-sm-6"> 
                 {{ form.localidad }}
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.fecha_inicio.id_for_label }}" > Seleccione una fecha de inicio </label> 
+            <div class="col-sm-6 mb-3 mb-sm-0"> 
                 {{ form.fecha_inicio }}
             </div>
-            <div class="col-sm-6">
+            <label for = " {{ form.equipo.id_for_label }}" > Seleccione un equipo: </label> 
+            <div class="col-sm-6"> 
                 {{ form.equipo }}
             </div>
         </div>
