--- a/Isp/Internet_Valle/templates/equipo_form.html
+++ b/Isp/Internet_Valle/templates/equipo_form.html
@@ -7,7 +7,8 @@
         {% csrf_token %}
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.nombre.id_for_label }}" > Nombre del Equipo </label> 
+            <div class="col-sm-6 mb-3 mb-sm-0"> 
                 {{ form.nombre }}
             </div>
             <div class="col-sm-6">
@@ -16,6 +17,7 @@
         </div>
 
         <div class="form-group row">
+            <label for = "{{ form.descripcion.id_for_label }}"> Descripcion del equipo </label>
             <div class="col-sm-6 mb-3 mb-sm-0">
                 {{ form.descripcion }}
             </div>
