--- a/Isp/Internet_Valle/templates/localidad_form.html
+++ b/Isp/Internet_Valle/templates/localidad_form.html
@@ -1,35 +1,16 @@
 {% extends 'form_base.html' %}
 {% load static %}
-{% block nombre %}Alta De Cliente{% endblock nombre %}
-{% block nombre2 %}Registrar Cliente{% endblock nombre2 %}
+{% block nombre %}Alta De Localidad{% endblock nombre %}
+{% block nombre2 %}Registrar Localidad {% endblock nombre2 %}
 {% block campos %}
     <form method="POST">
         {% csrf_token %}
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.nombre.id_for_label }}" > Nombre de la localidad:  </label> 
+            <div class="col-sm-6 mb-3 mb-sm-0"> 
                 {{ form.nombre }}
             </div>
-            <div class="col-sm-6">
-                {{ form.apellido }}
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
-                {{ form.dni }}
-            </div>
-            <div class="col-sm-6">
-                {{ form.telefono }}
-            </div>
-        </div>
-
-        <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
-                {{ form.mail }}
-            </div>
-        </div>
-
         <button type="submit" class="btn btn-primary btn-center">
             <i class="fas fa-save"></i> Guardar registro
         </button>
