--- a/Isp/Internet_Valle/templates/localidad_list.html
+++ b/Isp/Internet_Valle/templates/localidad_list.html
@@ -3,21 +3,13 @@
 {% block thead %}
     <tr>
         <th>Nombre</th>
-        <th>Apellido</th>
-        <th>Dni</th>
-        <th>Telefono</th>
-        <th>Email</th>
     </tr>
 {% endblock thead %}
 
 {% block tbody %}
-    {% for c in object_list  %}
+    {% for l in object_list  %}
         <tr>
-            <td>{{ c.nombre }}</td>
-            <td>{{ c.apellido }}</td>
-            <td>{{ c.dni }}</td>
-           <td>{{ c.telefono }}</td>
-           <td>{{ c.mail }}</td>
+            <td>{{ l.nombre }}</td>
         </tr>
     {% endfor %}
 {% endblock tbody %}
