--- a/Isp/Internet_Valle/templates/pago_form.html
+++ b/Isp/Internet_Valle/templates/pago_form.html
@@ -7,25 +7,30 @@
         {% csrf_token %}
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.contrato.id_for_label }}" class = "col-sm-3 col-form-label"> Elija un contrato: </label>
+            <div class="col-sm-3 mb-3 mb-sm-0">
                 {{ form.contrato }}
             </div>
-            <div class="col-sm-6">
+            <label for = " {{ form.monto_total.id_for_label }}" class = "col-sm-3 col-form-label"> Ingrese el monto total </label>
+            <div class="col-sm-3 mb-3 mb-sm-0">
                 {{ form.monto_total }}
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.fecha_emision.id_for_label }}" class = "col-sm-3 col-form-label"> Ingrese la fecha de emision </label>
+            <div class="col-sm-3 mb-3 mb-sm-0">
                 {{ form.fecha_emision }}
             </div>
-            <div class="col-sm-6">
+            <label for = " {{ form.fecha_vencimiento.id_for_label }}" class = "col-sm-3 col-form-label"> Ingrese la fecha de vencimiento </label>
+            <div class="col-sm-3 mb-3 mb-sm-0">
                 {{ form.fecha_vencimiento }}
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.fecha_pago.id_for_label }}" class = "col-sm-3 col-form-label"> Ingrese la fecha de pago </label>
+            <div class="col-sm-3 mb-3 mb-sm-0">
                 {{ form.fecha_pago }}
             </div>
         </div>
