--- a/Isp/Internet_Valle/templates/servicio_form.html
+++ b/Isp/Internet_Valle/templates/servicio_form.html
@@ -7,13 +7,15 @@
         {% csrf_token %}
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.velocidad.id_for_label }}" > Velocidad del Servicio (en MB) </label> 
+            <div class="col-sm-6 mb-3 mb-sm-0"> 
                 {{ form.velocidad }}
             </div>
         </div>
 
         <div class="form-group row">
-            <div class="col-sm-6 mb-3 mb-sm-0">
+            <label for = " {{ form.monto.id_for_label }}" > Monto del Servicio </label> 
+            <div class="col-sm-6 mb-3 mb-sm-0"> 
                 {{ form.monto }}
             </div>
         </div>
